--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,28 +3,23 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:icon="@drawable/ic_timeline"
+        android:title="Timeline" />
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
-
-    <item
-        android:id="@+id/navigation_results"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_results" />
+        android:icon="@drawable/ic_resources"
+        android:title="Resources" />
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:icon="@drawable/ic_submissions"
+        android:title="Submissions " />
 
     <item
         android:id="@+id/navigation_contacts"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_contacts" />
+        android:icon="@drawable/ic_about_us"
+        android:title="About us    " />
 
 
 </menu>
