--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -13,7 +13,7 @@
         tools:ignore="UselessParent">
 
         <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/appBarLayout2"
+            android:id="@+id/appBarLayouttimeline"
             android:layout_marginStart="16dp"
             android:layout_width="200dp"
             android:layout_height="48dp"
@@ -23,7 +23,7 @@
             app:expanded="false">
 
             <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tabLayout2"
+                android:id="@+id/tabLayouttimeline"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
@@ -50,7 +50,7 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.viewpager.widget.ViewPager
-            android:id="@+id/viewPager2"
+            android:id="@+id/viewPagertimeline"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
