--- a/app/src/main/res/layout/item_resourcesfiles.xml
+++ b/app/src/main/res/layout/item_resourcesfiles.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/resday1title"
+        android:id="@+id/resfilestitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/gotham_medium"
@@ -26,7 +26,7 @@
         app:layout_constraintStart_toEndOf="@+id/resday1image"
         app:layout_constraintTop_toTopOf="@+id/resday1image" />
     <TextView
-        android:id="@+id/resday1desc"
+        android:id="@+id/resfilesdesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/gotham_light"
@@ -35,9 +35,9 @@
         android:text="This is a desc"
         android:layout_marginStart="8dp"
         app:layout_constraintStart_toEndOf="@+id/resday1image"
-        app:layout_constraintTop_toBottomOf="@+id/resday1title" />
+        app:layout_constraintTop_toBottomOf="@+id/resfilestitle" />
     <TextView
-        android:id="@+id/resday1date"
+        android:id="@+id/resfilesdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/gotham_light"
@@ -47,7 +47,26 @@
         android:layout_marginTop="2dp"
         android:layout_marginStart="8dp"
         app:layout_constraintStart_toEndOf="@+id/resday1image"
-        app:layout_constraintTop_toBottomOf="@+id/resday1desc" />
+        app:layout_constraintTop_toBottomOf="@+id/resfilesdesc" />
+
+    <RelativeLayout
+        android:id="@+id/resfiles_button"
+        android:layout_width="36dp"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <Button
+            android:id="@+id/resfiles_buttton_nested"
+            android:layout_width="5dp"
+            android:layout_height="25dp"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="12dp"
+            android:background="@drawable/ic_resfiles_popup" />
+    </RelativeLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
