--- a/app/src/main/res/layout/item_timelineday2.xml
+++ b/app/src/main/res/layout/item_timelineday2.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
@@ -7,6 +7,14 @@
 
 
 
+        <ProgressBar
+            android:id="@+id/progressbarday2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:indeterminate="true"
+            android:indeterminateTint="@color/colorPrimary"
+            android:indeterminateTintMode="src_atop"/>
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -17,4 +25,4 @@
 
 
 
-</ScrollView>
+</RelativeLayout>
