--- a/app/src/main/res/layout/items_guidelines.xml
+++ b/app/src/main/res/layout/items_guidelines.xml
@@ -3,13 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:layout_marginBottom="16dp"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tvguidelines"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
         android:fontFamily="@font/gotham_medium"
         android:textSize="18dp"
         android:textColor="@color/titlecolor"
