--- a/app/src/main/res/layout/fragment_sponsors.xml
+++ b/app/src/main/res/layout/fragment_sponsors.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/eventSwipeRefresh"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="16dp"
-        android:layout_marginTop="16dp">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="8dp">
 
         <ProgressBar
             android:id="@+id/sponsor_progressbar"
@@ -19,12 +16,12 @@
             android:layout_centerInParent="true"
             android:indeterminate="true"
             android:indeterminateTint="@color/colorPrimary"
-            android:indeterminateTintMode="src_atop"/>
+            android:indeterminateTintMode="src_atop" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview_sponsor"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
 
     </RelativeLayout>
